MODINV-331 Upgrade to Vertx v3.9.4 (CVE-2019-17640)