@@ -1,11 +1,7 @@
 package org.folio.inventory.support;
 
-import io.vertx.core.logging.Logger;
-import io.vertx.core.logging.LoggerFactory;
-
-import java.io.UnsupportedEncodingException;
-import java.lang.invoke.MethodHandles;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
@@ -16,7 +12,6 @@ import java.util.stream.Collectors;
 public class CqlHelper {
   private CqlHelper() { }
 
-  private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
   private static final Pattern cqlChar = Pattern.compile("[*?^\"\\\\]");
 
   public static String multipleRecordsCqlQuery(List<String> recordIds) {
@@ -25,13 +20,8 @@ public class CqlHelper {
     }
     else {
       String query = buildQueryByIds(recordIds);
-      try {
-        return URLEncoder.encode(query, "UTF-8");
+      return URLEncoder.encode(query, StandardCharsets.UTF_8);
 
-      } catch (UnsupportedEncodingException e) {
-        log.error(String.format("Cannot encode query %s", query));
-        return null;
-      }
     }
   }
 
@@ -67,7 +57,7 @@ public class CqlHelper {
    */
   public static String cqlMask(String s) {
     if (s == null) {
-      return s;
+      return null;
     }
     return cqlChar.matcher(s).replaceAll("\\\\$0");  // one backslash plus the matching character
   }
